--- a/webroot/css/estilo.css
+++ b/webroot/css/estilo.css
@@ -10,6 +10,23 @@
     padding: 0;
 }
 
+html, body{
+    height: 100%; 
+}
+
+body{
+    position: relative;
+}
+
+footer{
+    font-family: 'Bebas Neue', cursive;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    background-color: rgb(177, 177, 177);
+    width: 100%;
+}
+
 header{
     font-family: 'Bebas Neue', cursive;
     background-color: #a5f77a;
